Closed Bug 1650013 Opened 4 years ago Closed 4 years ago

Hyphenation resources fail to load in an unpackaged developer build on Windows

Categories

(Core :: Layout: Text and Fonts, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

Details

Attachments

(1 file)

This was what caused the assertion people reported in bug 1616379.

The issue is that aURI->GetFilePath at https://searchfox.org/mozilla-central/rev/31d8600b73dc85b4cdbabf45ac3f1a9c11700d8e/intl/hyphenation/glue/nsHyphenator.cpp#183 may return an absolute path with a leading slash, like "/c:/path/to/firefox/bin/hyphenation/xx_yy.hyf", but when passed to mapped_hyph_load_dictionary, that leading slash is unexpected and prevents the file being opened.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ef7219b3548d
Strip unexpected leading slash from absolute path on Windows when loading hyphenation resource. r=heycam
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: