Bug 1650013 - Strip unexpected leading slash from absolute path on Windows when loading hyphenation resource. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D81980